--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div id="pagewrap">
 	<header id="header">
 		<hgroup>
-			<h1 id="site-logo"><a href="#">GIT_Labortory</a></h1>
+			<h1 id="site-logo"><a href="#">брацкий сайт</a></h1>
 			<h2 id="site-description">My blog, vc, for fan:)</h2>
 		</hgroup>
 
